--- a/ads.html
+++ b/ads.html
@@ -1,3 +1,11 @@
+<html>
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+
+</head>
+
+<body>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
@@ -7,3 +15,6 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</body>
+
+</html>
