--- a/ads2.html
+++ b/ads2.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+</head>
+<body>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
@@ -7,3 +12,5 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</body>
+</html>
