--- a/ads2.html
+++ b/ads2.html
@@ -4,13 +4,14 @@
 </head>
 <body>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- A3shab -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-format="autorelaxed"
      data-ad-client="ca-pub-6828051033211492"
-     data-ad-slot="1666586225"></ins>
+     data-ad-slot="5066597576"
+     data-ad-format="link"></ins>
 <script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </body>
 </html>
