--- a/adv.html
+++ b/adv.html
@@ -1,7 +1,17 @@
-<script  type="text/javascript">
-var  obj0=document.getElementById("aim1<data:post.id/>");
-var  obj1=document.getElementById("aim2<data:post.id/>");
-var  s=obj1.innerHTML;
-var r=s.search(/\x3C!-- adsense --\x3E/igm);
-if(r>0)  {obj0.innerHTML=s.substr(0,r);obj1.innerHTML=s.substr(r+16);}
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+</head>
+<body>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-6828051033211492"
+     data-ad-slot="3092947022"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</body>
+</html
