--- a/amprandom.html
+++ b/amprandom.html
@@ -2,6 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
+<script src="https://clientcdn.pushengage.com/core/15953.js"></script>
+<script>
+_pe.subscribe();
+</script>
+	
 <meta charset="utf-8">
 <title>Random Post</title>
 <meta content='width=device-width, initial-scale=1' name='viewport'>
