--- a/Hp000.html
+++ b/Hp000.html
@@ -21,13 +21,12 @@
 
 
 <body>
-<div style="position: absolute; width: 168px; height: 141px; z-index: 1; left: 50%; top: 50%; right: 50%; bottom: 50%" id="layer1">
-<table border="0" width="100%" id="table1" dir="rtl" style="position: relative; left: 50%; top: 50%; right: 50%; bottom: 50%">
+<table border="1" width="100" id="table1" cellspacing="0" cellpadding="0" bordercolorlight="#FF0000" bordercolordark="#000000" dir="rtl" style="position: relative; left: 50%; top: 50%; right: 50%; bottom: 50%">
 	<tr>
-		<td>77667766776677</td>
+		<td>00000
+</td>
 	</tr>
 </table>
-<p>
 </body>
 
 </html>
