--- a/0.html
+++ b/0.html
@@ -4,5 +4,11 @@
 <title>HP</title>
 </head>
 <body>
+  
+<script type="text/javascript">
+var Ads1 = document.getElementById('GAdsense1');
+Ads1.parentNode.removeChild(Ads1);
+</script>  
+  
 </body>
 </html>
