--- a/ads234.html
+++ b/ads234.html
@@ -22,12 +22,12 @@ a {
 
 .related-post{margin:10px 0 0;overflow:hidden;direction: rtl;}
 .related-post-style-2{margin:0;padding:0;list-style:none}
-.related-post-style-2 li{width:100%;height:78px;display:block;padding:0;float:none;overflow:hidden;margin:0 0 10px;list-style:none}
+.related-post-style-2 li{width:100%;display:block;padding:0;float:none;overflow:hidden;margin:0 0 2px;list-style:none;border: 1px solid #e2e5eb;}
 .related-post-style-2 li:last-child{margin:0}
 .related-post-style-2 li a:hover{color:#777}
 .related-post-style-2 .related-post-item-thumbnail{width:138px;height:78px;max-width:none;max-height:none;background-color:transparent;border:none;padding:0;float:right;margin:0 0 0 8px;transition:all .4s ease-in-out;position:relative}
 .related-post-style-2 .related-post-item-thumbnail img{width:100%;height:100%;max-width:none;max-height:none;background-color:transparent;border:none;display:block}
-.related-post-style-2 .related-post-item-title{font-weight:500;padding-right:0;display:block;display:-webkit-box;margin-bottom:5px;line-height:1.1;font-size:90%!important}
+.related-post-style-2 .related-post-item-title{font-weight:500;padding-right:0;padding-top: 8px;display:block;display:-webkit-box;margin-bottom:5px;line-height:1.1;font-size:90%!important}
 .related-post-item-summary{display:none}
 </style>
 </head>
@@ -60,26 +60,14 @@ function getQueryVariable(variable) {
 var labelArray = [getQueryVariable("label")],
     relatedPostConfig = {
 		homePage: getQueryVariable("url"),
-        numPosts: 1,
-        thumbnailSize:300,
+        numPosts: 2,
+        thumbnailSize:320,
         widgetStyle: 2
     };
 </script>
 <script>
 /*! Related Post Widget for Blogger by Taufik Nurrohman => http://gplus.to/tovic */
 var randomRelatedIndex,showRelatedPost;(function(n,m,k){var d={widgetTitle:"",widgetStyle:1,homePage:"https://www.kompiajaib.com/",numPosts:6,summaryLength:370,titleLength:"auto",thumbnailSize:300,thumbnailHeight:169,noImage:"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAA3NCSVQICAjb4U/gAAAADElEQVQImWOor68HAAL+AX7vOF2TAAAAAElFTkSuQmCC",containerId:"related-post",newTabLink:false,moreText:"Baca Selengkapnya",callBack:function(){}};for(var f in relatedPostConfig){d[f]=(relatedPostConfig[f]=="undefined")?d[f]:relatedPostConfig[f]}var j=function(a){var b=m.createElement("script");b.type="text/javascript";b.src=a;k.appendChild(b)},o=function(b,a){return Math.floor(Math.random()*(a-b+1))+b},l=function(a){var p=a.length,c,b;if(p===0){return false}while(--p){c=Math.floor(Math.random()*(p+1));b=a[p];a[p]=a[c];a[c]=b}return a},e=(typeof labelArray=="object"&&labelArray.length>0)?"/-/"+l(labelArray)[0]:"",h=function(b){var c=b.feed.openSearch$totalResults.$t-d.numPosts,a=o(1,(c>0?c:1));j(d.homePage.replace(/\/$/,"")+"/feeds/posts/summary"+e+"?alt=json-in-script&orderby=updated&start-index="+a+"&max-results="+d.numPosts+"&callback=showRelatedPost")},g=function(z){var s=document.getElementById(d.containerId),x=l(z.feed.entry),A=d.widgetStyle,c=d.widgetTitle+'<ul class="related-post-style-'+A+'">',b=d.newTabLink?' target="_blank"':"",y='<span style="display:block;clear:both;"></span>',v,t,w,r,u;if(!s){return}for(var q=0;q<d.numPosts;q++){if(q==x.length){break}t=x[q].title.$t;w=(d.titleLength!=="auto"&&d.titleLength<t.length)?t.substring(0,d.titleLength)+"&hellip;":t;r=("media$thumbnail"in x[q]&&d.thumbnailSize!==false)?x[q].media$thumbnail.url.replace(/.*?:\/\//g , "https://cdn.staticaly.com/img/").replace(/\/s[0-9]+(\-c)?/, "/w"+d.thumbnailSize+"-h169-p-k-no-nu"):d.noImage;u=("summary"in x[q]&&d.summaryLength>0)?x[q].summary.$t.replace(/<br ?\/?>/g," ").replace(/<.*?>/g,"").replace(/[<>]/g,"").substring(0,d.summaryLength)+"&hellip;":"";for(var p=0,a=x[q].link.length;p<a;p++){v=(x[q].link[p].rel=="alternate")?x[q].link[p].href:"#"}if(A==2){c+='<li><a href="'+v+'" target="_blank" title="'+t+'"'+b+'><div class="related-post-item-thumbnail"><img alt="" class="related-post-item-thumbnail" src="'+r+'" width="16" height="9"></div></a><a class="related-post-item-title" title="'+t+'" target="_blank" href="'+v+'"'+b+">"+w+'</a><span class="related-post-item-summary"><span class="related-post-item-summary-text">'+u+'</span> <a href="'+v+'" class="related-post-item-more"'+b+">"+d.moreText+"</a></span>"+y+"</li>"}else{if(A==3||A==4){c+='<li class="related-post-item" tabindex="0"><a class="related-post-item-title" href="'+v+'"'+b+' target="_blank"><img alt="" class="related-post-item-thumbnail" src="'+r+'" width="'+d.thumbnailSize+'" height="'+d.thumbnailSize+'"></a><div class="related-post-item-tooltip"><a class="related-post-item-title" title="'+t+'" href="'+v+'"'+b+" target='_blank'>"+w+"</a></div>"+y+"</li>"}else{if(A==5){c+='<li class="related-post-item" tabindex="0"><a class="related-post-item-wrapper" href="'+v+'" title="'+t+'"'+b+' target="_blank"><img alt="" class="related-post-item-thumbnail" src="'+r+'" width="'+d.thumbnailSize+'" height="'+d.thumbnailSize+'"><span class="related-post-item-tooltip">'+w+"</span></a>"+y+"</li>"}else{if(A==6){c+='<li><a class="related-post-item-title" title="'+t+'" href="'+v+'"'+b+" target='_blank'>"+w+'</a><div class="related-post-item-tooltip"><img alt="" class="related-post-item-thumbnail" src="'+r+'" width="'+d.thumbnailSize+'" height="'+d.thumbnailSize+'"><span class="related-post-item-summary"><span class="related-post-item-summary-text">'+u+"</span></span>"+y+"</div></li>"}else{c+='<li><a title="'+t+'" href="'+v+'"'+b+" target='_blank'>"+w+"</a></li>"}}}}}s.innerHTML=c+="</ul>"+y;d.callBack()};randomRelatedIndex=h;showRelatedPost=g;j(d.homePage.replace(/\/$/,"")+"/feeds/posts/summary"+e+"?alt=json-in-script&orderby=updated&max-results=0&callback=randomRelatedIndex")})(window,document,document.getElementsByTagName("head")[0]);
-</script>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- After article -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6828051033211492"
-     data-ad-slot="8498596146"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
 </body>
