--- a/matched-content.html
+++ b/matched-content.html
@@ -71,7 +71,7 @@ var randomRelatedIndex,showRelatedPost;(function(n,m,k){var d={widgetTitle:"",wi
 </script>
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class='adsbygoogle' data-ad-client='ca-pub-6828051033211492' data-ad-format='autorelaxed' data-ad-slot='3354258058' data-matched-content-columns-num='1' data-matched-content-rows-num='2' data-matched-content-ui-type="image_card_sidebyside" style='display:block'/>
+<ins class='adsbygoogle' data-ad-client='ca-pub-6828051033211492' data-ad-format='autorelaxed' data-ad-slot='3354258058' data-matched-content-columns-num='1' data-matched-content-rows-num='2' data-matched-content-ui-type="image_sidebyside" style='display:block'/>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script> 
